got table working and alignment correct

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@ body {
 
 table {
   font-size: 1em;
-  display: flex;
   max-width: 100%;
 }
 
